<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorDark"
    tools:context=".FrameworkDetail">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile_detail"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        tools:src="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tv_nama_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_profile_detail"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/colorHeader"
        android:text="@string/nama_framework"/>

    <TextView
        android:id="@+id/tv_detail_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorHeader"
        android:layout_below="@+id/tv_nama_detail"
        android:layout_marginTop="20dp"
        android:layout_margin="20dp"
        android:text="@string/detail_framework" />

    <Button
        android:id="@+id/btn_to_course"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_detail_detail"
        android:layout_centerInParent="true"
        android:text="@string/go_to_course_online" />

</RelativeLayout>